--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    \n",
+    "    favorite_destination.append()\n",
     "    return 'madagascar'\n",
     "    pass"
    ]
