--- a/index.ipynb
+++ b/index.ipynb
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
     "    favorite_destination.append('madagascar')\n",
-    "    return favo\n",
+    "    return favorite_destination[-1]\n",
     "    pass"
    ]
   },
