--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    favorite_destination.append('madagascar')\n",
+    "    trav.append('madagascar')\n",
     "    return favorite_destination[-1]\n",
     "    pass"
    ]
