--- a/index.ipynb
+++ b/index.ipynb
@@ -157,8 +157,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    trav.append('madagascar')\n",
-    "    return favorite_destination[-1]\n",
+    "    travel_destinations.append('madagascar')\n",
+    "    return travel_destinations[-1]\n",
     "    pass"
    ]
   },
