--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitaliz\n",
+    "    capitalized_countries = []\n",
     "    for destination in travel_destinations:\n",
     "        destination.title()\n",
     "    return travel_destinations\n",
